# keenwatch

./: Cargo.toml  main.rs  main2.rs
assets/: Robot.glb  jawbreaker.tsx  map1.tmx  map2.tmx  map3.tmx  sure.ldtk
client/: Cargo.toml  Makefile  docs.md
client/src/: camera.rs  gate.rs  gate_lock.rs  main.rs  map.rs  npc.rs  player.rs
docs/: brainstorm.md
src/: camera.rs  gate_lock.rs  player.rs
src/utils/: camera.rs  texture.rs  tiled.rs
